added likes and replies

--- a/optionA.html
+++ b/optionA.html
@@ -46,11 +46,57 @@ body {font-family: "Open Sans"}
   <div class="w3-row w3-padding w3-border">
   	<button type="button" class="w3-button w3-block w3-black" onclick="loadMoreArticles()">Load More Articles</button>
     <div id="section1" class="w3-col l8 s12"><!--left column starts here-->
-    	<!--Article 1-->
-    	<!--End Article 1-->
-       <hr>
+    	
+    	<div class="w3-container w3-white w3-margin w3-padding-large"><div class="w3-center">
+				<!--Article 1-->
+				<div>
+    		<h3>STRUGGLING WITH RUSSIAN</h3><h5>but doing well with Spanish, <span class="w3-opacity">March 19, 2020</span></h5></div><div class="w3-justify"><img src="https://unwyre-user.s3-us-west-2.amazonaws.com/user/us-west-2:49307e47-8c31-4628-a607-a7eb852d50ae/images/window_sill_riley.jpg" alt="Men in Hats" style="width:100%" class="w3-padding-16"><p><strong>Languages!</strong> So for my dive into 10 languages, I have been a little stuck on Russian. I have tried some youtube videos, and I tried out Duo Lingo for Russian. I think I might have to learn the Cyrillic alphabet to learn Russian, which is fine, it’s just going to take some more time.</p><p>For Spanish, I speak Spanish to a neighbor who sits on his porch while I walk my dog every morning. Our conversation is pretty much this:</p><p>Me: Hola,<br />Him: Hola amigo, como estas?<br />Me: Bien, e tu?<br />Him: Muy bien... Have a good day my friend.<br />Me: Que tengas un buen dia!<br /><br />I’d like to get this conversation down in each language, and maybe learn to say something else to my neighbor in Spanish. Duo Lingo has inspired me to at least learn how to say, I am NAME. Are you NAME? Yes and no. Here is the start of that study. (Hello, I am Daniel. Yes, good.)<br /><br /><ul>
+<li>Russian - Priveet, ya Daniil. Da, khorosho.</li><li>German - Hallo, ich bin Daniel. Ja gut.</li><li>Spanish - Hola, soy Daniel. Si bien.</li><li>French - Bonjour, je suis daniel. Oui bien.</li><li>Portuguese - Ola, eu sou daniel. Sim Bom.</li><li>Japanese - Konnichiwa, Danierudesu. Hai, ii neh.</li><li>Korean - Annyeong-hasseo, daniel-ibnida. Ne, johsuibnida.</li><li>Chinese - Ni hao, wah shuh dānní'ěr. Wo shi, hun how.</li><li>Vietnamese - cin chao, tôi là daniel. Vang tot.</li><li>Tagalog - Kumusta, ako si daniel. Oh oh magaling.</li></ul></p><p><br></p>
+<!--End Article 1-->
+<!--Controls 1-->
+<div class="w3-left"><button class="w3-button w3-white w3-border" onclick="likeFunction(this)"><b><i class="fa fa-thumbs-up"></i> Like</b></button></p><p class="w3-right"><button class="w3-button w3-black" onclick="myFunction('demo2')"><b>Replies  </b> <span class="w3-tag w3-white">2</span></button></div>
+<!--End Controls 1-->
+			<p class="w3-clear"></p></div></div>
+  <hr>
+  <div class="w3-container w3-white w3-margin w3-padding-large"><div class="w3-center">
        <!--Article 2-->
-      <!--End Article 2-->
+       <h3 style="white-space: normal;">STRUGGLING WITH RUSSIAN</h3><h5><span style="white-space: normal;">But doing well with Spanish,</span> <span class="w3-opacity">March 19, 2020</span></h5></div>
+        <div class="w3-justify"><img src="https://www.w3schools.com/w3css/tryw3css_templates_fashion_blog.htmw3images/man_hat.jpg" alt="Men in Hats" style="width:100%" class="w3-padding-16">
+        <p><strong>Languages!</strong> So for my dive into 10 languages, I have been a little stuck on Russian. I have tried some youtube videos, and I tried out Duo Lingo for Russian. I think I might have to learn the Cyrillic alphabet to learn Russian, which is fine, it’s just going to take some more time.</p>
+<p>For Spanish, I speak Spanish to a neighbor who sits on his porch while I walk my dog every morning. Our conversation is pretty much this:</p>
+<p>
+Me: Hola,<br />
+Him: Hola amigo, como estas?<br />
+Me: Bien, e tu?<br />
+Him: Muy bien... Have a good day my friend.<br />
+Me: Que tengas un buen dia!<br />
+</p>
+<p>
+I’d like to get this conversation down in each language, and maybe learn to say something else to my neighbor in Spanish. Duo Lingo has inspired me to at least learn how to say, I am NAME. Are you NAME? Yes and no. Here is the start of the that study. (Hello, I am Daniel. Yes, good.)</p>
+<p><ul>
+
+<li>Russian - Priveet, ya Daniil. Da, khorosho.</li>
+<li>German - Hallo, ich bin Daniel. Ja gut.</li>
+<li>Spanish - Hola, soy Daniel. Si bien.
+<li>French - Bonjour, je suis daniel. Oui bien.</li>
+<li>Portuguese - Ola, eu sou daniel. Sim Bom.</li>
+<li>Japanese - Konnichiwa, Danierudesu. Hai, ii neh.</li>
+<li>Korean - Annyeong-hasseo, daniel-ibnida. Ne, johsuibnida.</li>
+<li>Chinese - Ni hao, wah shuh dānní'ěr. Wo shi, hun how.</li>
+<li>Vietnamese - cin chao, tôi là daniel. Vang tot.</li>
+<li>Tagalog - Kumusta, ako si daniel. Oh oh magaling.</li>
+</div>
+<!--End Article 2-->
+<!--Controls 2-->
+<div class="w3-justify"><br><p class="w3-left"><button class="w3-button w3-white w3-border" onclick="likeFunction(this)"><b><i class="fa fa-thumbs-up"></i> Like &nbsp;</b><span class="w3-tag w3-white w3-border">2</span></button></p><p class="w3-right"><button class="w3-button w3-black" onclick="myFunction('demo2')"><b>Replies &nbsp;</b> <span class="w3-tag w3-white">2</span></button></p><p class="w3-clear"></p></div>
+<!--End Controls 2-->
+<!--Replies 2-->
+<div style="display:block"><div class="w3-row"><hr><div class="w3-col l2 m3"><img src="https://unwyre-user.s3-us-west-2.amazonaws.com/user/us-west-2%3A49307e47-8c31-4628-a607-a7eb852d50ae/images/dave_miller_headshot.jpg" style="width:90px;"></div><div class="w3-col l10 m9"><h4>David Miller <span class="w3-opacity w3-medium">March 20, 2020, 4:01 AM</span></h4><p>Je'm Appel Daniel. Nastrovia.</p><br></div></div><div class="w3-row w3-margin-bottom"><div class="w3-col l2 m3"><img src="https://www.w3schools.com/w3css/tryw3css_templates_fashion_blog.htmw3images/girl.jpg" style="width:90px;"></div><div class="w3-col l10 m9"><h4>Stacey Miller <span class="w3-opacity w3-medium">March 20, 2020, 12:27 PM</span></h4><p>I have some old primers for Russian. Learning the alphabet was the 1st step, but it took over 20 years to stop mixing up my cursive writing. Obviously, when writing in cursive I must be using phonetics. It's the only part of the Russian Language that took for me. R, da, nyet and dom is the retained vocabulary. Not much use here for "tsza" and "shch", but I think there's a joke in the making when dog becomes God. And that's your Russian lesson for today.😄</p></div></div></div>
+<!--End Replies 2-->
+
+</div></div>
+
+      
     </div><!--left column ends here-->
 
   <div class="w3-col l4"><undefined></undefined><div class="w3-white w3-margin"><img src="https://unwyre-user.s3-us-west-2.amazonaws.com/user/us-west-2%3A49307e47-8c31-4628-a607-a7eb852d50ae/images/dmiller_headshot.jpg" alt="Jane" style="width:100%" class="w3-grayscale"><div class="w3-container w3-black"><h4>Daniel Miller</h4><p>Hi, I'm a writer, software developer, material science engineer, and inactive patent attorney. I like finding unique perspectives on how the world works and building applications.&nbsp;</p><p><br></p></div></div><hr>
